manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: daily-quote
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: daily-quote
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: flask-app
  type: ClusterIP
